<resources>
    <string name="app_name">Enkrip Dekrip</string>
    <string name="judul">Tata Cara Penggunaan</string>
    <string name="petunjuk">\nPertama Pengguna Harus Menentukan Akan Melakukan Enripsi (Mengacak Pesan) Atau Deskripsi
                  (Mengembalikan Pesan Kebentuk Aslinya)
                  \n
                  \nJika pengguna sudah menentukan pilihan akan melakukan proses Enkripsi atau Deskripsi,
                   maka pengguna harus menginputkan pesan yang akan di Enkripsi atau Deskripsi didalam kolom Input.
                   Sehingga hasil dari proses Enkripsi dan Deskripsi dapat dilihat didalam kolom output.
                   </string>
    <string name="judulutama">Penerapan Algoritma Lipat Pada Android
                  \nGuna Mengamankan Komunikasi Data
                  \nDi Media Sosial
                  \n
                  \nMuhammad Imam
                  \n14030065</string>
    <string name="splash">Splash Screen</string>
    <string name="hint_encrypt">Masukkan Text</string>
    <string name="encrypt">Enkripsi</string>
    <string name="decrypt">Dekripsi</string>
    <string name="hint_decrypt">Hasil...</string>
    <string name="enkripdekrip">Enkrip Dekrip</string>
    <string name="greetings">Welcome! and lets try secure your data with us!</string>
    <string name="enkripsi">Encrypt</string>
    <string name="dekripsi">Decrypt</string>
    <string name="masukkanteks">Masukkan teks..</string>
    <string name="masukkankey">Masukkan key..</string>
    <string name="hasilenkrip">Hasil enkrip..</string>
    <string name="hasildekrip">Hasil dekrip...</string>
    <string name="title_dekrip">Dekripsi</string>
    <string name="title_enkrip">Enkripsi</string>
</resources>
